--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,7 @@
     <h1>
         Login
     </h1>
+    <!-- Login form -->
     <form action="/login" method="POST">
         
             <label for="username">Enter username</label>
