--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,7 @@
     <h1>
         Sign up
     </h1>
+    <!-- Register form -->
     <form action="/register" method="POST">
         
             <label for="username">Enter username</label>
